homeworks/voskoboinikova/module-03/lesson-08/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: lesson07
spec:
  ingressClassName:  traefik
  tls:
     - hosts:
         - course-app.local
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-svc
                port:
                  number: 80
